--- a/pdrApp/app/src/main/res/values/colors.xml
+++ b/pdrApp/app/src/main/res/values/colors.xml
@@ -7,5 +7,6 @@
     <color name="teal_700">#FF018786</color>
     <color name="green">#FF53D658</color>
     <color name="black">#95000000</color>
+    <color name="black55">#55000000</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
