--- a/pdrApp/app/src/main/res/layout/pgr_info.xml
+++ b/pdrApp/app/src/main/res/layout/pgr_info.xml
@@ -18,32 +18,28 @@
         android:id="@+id/container2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="60dp"
+
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/textView1"
-            android:layout_width="300dp"
-            android:layout_height="400dp"
-            android:layout_marginTop="20dp"
-
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingStart="0dp"
             android:gravity="center"
             android:text="@string/pdrInfo"
             android:textColor="@color/black"
             android:textSize="30dp"
             android:textStyle="bold" />
 
-
         <Button
             android:id="@+id/btn_back"
-            android:layout_width="wrap_content"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-
+            android:gravity="center"
+            android:layout_marginTop="400dp"
             android:background="@drawable/btn_stroke_press"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
             android:text="@string/backtoMenu"
             android:textSize="24sp" />
     </LinearLayout>
