--- a/pdrApp/app/src/main/res/values/descrlevels.xml
+++ b/pdrApp/app/src/main/res/values/descrlevels.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="levelone">Оберіть тільки Знаки пріоритету!</string>
+    <string name="leveloneEnd">"Ви пройшли цей рівень! Вітаємо!!!</string>
 </resources>
