--- a/pdrApp/app/src/main/res/layout/previewdialog2.xml
+++ b/pdrApp/app/src/main/res/layout/previewdialog2.xml
@@ -31,9 +31,9 @@
             android:layout_height="250dp"
             android:gravity="center"
             android:layout_gravity="center"
-            android:text="@string/leveloneEnd"
+            android:text="@string/leveltwo"
             android:textStyle="bold"
-            android:textSize="40dp"
+            android:textSize="20dp"
             android:textColor="@color/white"
             android:layout_weight="0"
             />
@@ -43,7 +43,7 @@
             android:id="@+id/btncont"
             android:background="@drawable/btn_stroke_press"
             android:layout_weight="10"
-            android:text="@string/cont1"
+            android:text="@string/cont"
             android:textSize="24dp"
             android:textColor="@color/white"
             android:paddingRight="10dp"
